@@ -802,6 +802,10 @@ SimpleStatementKeyword:
 }
 |	T_RETURN
 {
+   if (pCompiler->getForEachLevel() > 0)
+   {
+	   pScript->addInstruction(new NXSL_Instruction(pScript, pLexer->getCurrLine(), OPCODE_POP, (short)pCompiler->getForEachLevel()));
+   }
 	$$ = new NXSL_Instruction(pScript, pLexer->getCurrLine(), OPCODE_RETURN);
 }
 |	T_PRINT
@@ -882,7 +886,7 @@ ForStatement:
 ;
 
 ForEachStatement:
-	ForEach ForEachBody
+	ForEach { pCompiler->newForEachLevel(); } ForEachBody { pCompiler->closeForEachLevel(); }
 ;
 
 ForEach:
